# electronics_retail

./: .env-sample  README.md  pyproject.toml
config/: settings.py  urls.py
retail/: admin.py  models.py  serializers.py  urls.py  views.py
